# automata_survey

./: Cargo.toml  README.md
output/1/1/: 00000240:IR:0.875:gif
src/automata/: automata_1d.rs  automata_2d.rs  mod.rs  types.rs
